# zoidberg

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black-fix.yml  python_publish.yml  ruff.yaml  test-mms.yml  test-python-package.yml
examples/: example-straight-stellarator.py  field_line.py  poincare.py  rotating-ellipse.py  straight-stellarator-curvilinear.py  straight-stellarator-poincare.py  tokamak.py
test/mms/: .gitignore  Makefile  delp_grid.py  delp_mms.py  laplace_grid.py  laplace_mms.py  mms-fci.py  mms_helper.py  parallel_grid.py  parallel_mms.py  plot_mms.py  poloidal_const_4_2_4_1.fci.nc  poloidal_grid.py  poloidal_mms.py  radial_grid.py  radial_mms.py  tilted_grid.py
test/mms/mms/: BOUT.inp
zoidberg/: __init__.py  boundary.py  diff.py  field.py  fieldtracer.py  grid.py  plot.py  poloidal_grid.py  progress.py  rzline.py  smooth.py  spectralline.py  stencil_dagp_fv.py  test_diff.py  test_field.py  test_fieldtracer.py  test_grid.py  test_poloidal_grid.py  test_rzline.py  test_smooth.py  test_volume_dommaschk.py  test_volume_slab.py  test_zoidberg.py  weights.py  zoidberg.py
zoidberg/examples/: common.py  rotating_ellipse.py  screwpinch.py
