[metadata]
name = zoidberg
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Hill
author_email = peter.hill@york.ac.uk
description = Generate flux-coordinate independent (FCI) grids for BOUT++
license = LGPLv3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization
project_urls =
    Documentation = https://bout-dev.readthedocs.io/en/latest
    Source = https://github.com/boutproject/zoidberg
    Tracker = https://github.com/boutproject/zoidberg/issues

[options]
packages = find:
install_requires =
    boututils ~= 0.1.10
    numpy ~= 1.14
    sympy ~= 1.7
    scipy ~= 1.0
    matplotlib ~= 3.1
    netcdf4 ~= 1.4
    importlib-metadata; python_version >= "3.6"
    freeqdsk >= 0.4.0

[options.extras_require]
tests =
    pytest >= 3.3.0

[options.entry_points]
console_scripts =
    zoidberg-rotating-ellipse = zoidberg.examples.rotating_ellipse:main
    zoidberg-screwpinch = zoidberg.examples.screwpinch:main
